# w3g-parser

./: .gitignore  AGENTS.md  FORMAT.md  PHILOSOPHY.md  PROGRESS.md  README.md  RESEARCH.md  RPI.md  VALIDATION.md  spec.md
.claude/: settings.json
.claude/commands/: agent-daemon.md  archie.md  cody.md  lead-auto.md  lead.md  rex.md  scout.md  val.md
scripts/: autonomous-loop.sh  resume.sh
tests/fixtures/: replay_1.w3g  replay_1000.w3g  replay_10000.w3g  replay_20000.w3g  replay_5000.w3g  replay_50000.w3g  replay_70000.w3g  replay_80852.w3g  replay_85000.w3g  replay_90000.w3g
thoughts/decisions/: decision-log.md
thoughts/impl/: phase-1-foundation.md  phase-2-headers.md  phase-3-decompression.md  (+3 more)
w3g-parser/: Cargo.toml  ENCODED_SETTINGS_RESEARCH.md  PROGRESS.md
w3g-parser/src/: binary.rs  error.rs  format.rs  lib.rs
w3g-parser/src/actions/: ability.rs  hotkey.rs  mod.rs  movement.rs  parser.rs  selection.rs  types.rs
w3g-parser/src/decompress/: classic.rs  grbn.rs  mod.rs
w3g-parser/src/header/: classic.rs  grbn.rs  mod.rs
w3g-parser/src/records/: game_header.rs  mod.rs  player.rs  timeframe.rs
w3g-parser/tests/: action_integration.rs  decompress_integration.rs  header_integration.rs  records_integration.rs
w3g-parser/thoughts/impl/: action-parser-phase4.md  chat-parsing.md
w3g-parser/thoughts/plans/: action-parser-fixes.md  reforged-compatibility.md  stats-improvement.md
w3g-parser/thoughts/research/: reforged-action-format.md  reforged-parsers-survey.md  unknown-actions-analysis.md
w3g-parser/thoughts/validation/: action-parser-phase4.md
(+12 files in other folders)
